Display the lists in html

--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "cheerio": "latest",
     "express": "latest",
     "iconv": "^2.2.1",
+    "pug": "^2.0.0-beta11",
     "request": "latest"
   }
 }
